Fixed header z-index

--- a/docs/css/rdk-override.css
+++ b/docs/css/rdk-override.css
@@ -4,6 +4,7 @@
 
 .swagger-ui .topbar {
     position:fixed;
+    z-index: 999;
     top: 0;
     left: 0;
     width: 100%;
